<resources>
    <string name="app_name">Listen Up Mah I\'m callin ye</string>
    <string name="no_permission_text">Phone permission required to function. Press button to allow permission</string>
    <string name="give_permission">Gib permission</string>
    <string name="volume_setting">Ring Volume</string>
    <string name="settings_title">Sound settings</string>
    <string name="settings_volume">Set ring volume</string>
    <string name="whitelist_title">Whitelisted numbers</string>
    <string name="whitelist_add_contact">Add contact</string>
    <string name="whitelist_add_number">Add phone number</string>
    <string name="shared_preferences_sound">preferences_sound</string>
    <string name="shared_preferences_whitelist">preferences_b</string>
    <string name="pref_whitelist_count">pref_whitelist_count</string>
    <string name="pref_whitelist_value">pref_whitelist_value_</string>
    <string name="pref_ring_volume">pref_ring_volume</string>
    <string name="pref_sound_ring_mode">pref_ring_mode</string>
    <string name="pref_"
</resources>
