<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="715dp"
            android:id="@+id/no_permission_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone">
        <TextView
                android:text="@string/no_permission_text"
                android:layout_width="match_parent"
                android:layout_height="37dp" android:id="@+id/textView"
                tools:text="@string/no_permission_text" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" tools:layout_editor_absoluteX="0dp"/>
        <Button
                android:text="@string/give_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_request_phone"
                tools:text="@string/give_permission"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="52dp"
                tools:layout_editor_absoluteX="0dp"
        />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="715dp"
            android:id="@+id/has_permission_layout" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0">
        <TextView
                android:text="@string/whitelist_title"
                android:layout_width="129dp"
                android:layout_height="26dp"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="19dp"
                tools:text="@string/whitelist_title"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="247dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="1.0"
        />
        <Button
                android:text="@string/whitelist_add_contact"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:id="@+id/button_add_contact" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                tools:text="@string/whitelist_add_contact" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="67dp" android:visibility="visible"
                android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/button_add_number"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="100dp"/>
        <Button
                android:text="@string/whitelist_add_number"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:id="@+id/button_add_number"
                tools:text="@string/whitelist_add_number" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="67dp" android:layout_marginTop="9dp"
                app:layout_constraintTop_toBottomOf="@+id/button_add_contact"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/seekVolume"/>
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/scroll_whitelisted_numbers"
                app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" android:layout_marginTop="48dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"/>
        </ScrollView>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_delete"
                android:id="@+id/button_clear_whitelist"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="169dp" app:layout_constraintBottom_toTopOf="@+id/scroll_whitelisted_numbers"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/seekVolume"
                app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="22dp"
                android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="16dp"/>
        <SeekBar
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/seekVolume" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_add_number" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button_clear_whitelist" android:layout_marginBottom="8dp"
                android:max="100" android:progress="50"/>
        <TextView
                android:text="@string/volume_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_add_number"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/seekVolume" android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>